# OpenGL2023

./: .editorconfig  .gitignore  Application.cpp  CMakeLists.txt  OpenGL01.sln  OpenGL01.vcxproj  OpenGL01.vcxproj.filters  README.md  UseTexture.cpp  glad.c  main.cpp  transform.cpp
AspectOpenGL/: CMakeLists.txt
AspectOpenGL/Resources/Shaders/: Basic.shader  specularFragment.shader
AspectOpenGL/Source/: CMakeLists.txt
AspectOpenGL/Source/Breakout/: Aspect.h  CMakeLists.txt  aspch.h  game.cpp  resource_manager.cpp
AspectOpenGL/Source/Breakout/Shaders/: shakeFragment.shader  shakeVertex.shader
AspectOpenGL/Source/Breakout/include/: CMakeLists.txt
AspectOpenGL/Source/Breakout/src/: CMakeLists.txt
AspectOpenGL/Source/Cases/: CMakeLists.txt
AspectOpenGL/Source/Cases/Case1_AsteroidsInstancing/: CMakeLists.txt
AspectOpenGL/Source/include/: light_shader_m.h  resource.h
AspectOpenGL/Source/src/Light/: color.cpp
Headers/: shader.h
main/Breakout/Headers/: ball_object.h  game.h  game_level.h  game_object.h  particle_generator.h  post_processor.h  resource_manager.h  sprite_renderer.h
main/Breakout/Shaders/: particleVertex.shader
main/Breakout/Source/: ball object.cpp  game.cpp  game_level.cpp  game_object.cpp  particle_generator.cpp  post_processor.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
main/Breakout/main/: breakout.cpp
main/Light/: basicModel.cpp  color.cpp
x64/Debug/: OpenGL01.exe.recipe  OpenGL01.ilk  OpenGL01.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/OpenGL01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL01.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
